# ripple

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: identity.rs  lib.rs  main.rs  relay.rs  utils.rs
cli/src/commands/: daemon.rs  peers.rs  send.rs  status.rs
cli/tests/: relay_integration.rs
core/: Cargo.toml
core/migrations/: 001_initial_schema.sql  002_add_submitted_column.sql
core/src/: bundle.rs  crdt.rs  crypto.rs  lib.rs  peer.rs  routing.rs  store.rs
core/tests/: bundle_expiry.rs  bundle_roundtrip.rs  encrypt_decrypt.rs  spray_and_wait.rs
docs/: README.md
docs/architecture/: cryptography.md  dtn-routing.md  ffi.md  storage.md  system-overview.md
docs/engineering/: ci-cd.md
docs/engineering/decisions/: ADR-001-rust-core.md  ADR-002-native-mobile.md  ADR-003-transport-stack.md  ADR-004-dns-routing.md  ADR-005-pure-rust-crypto.md  ADR-006-two-key-identity.md  ADR-007-hkdf-key-derivation.md  ADR-008-ffi-identity-passing.md  ADR-009-rate-limiter-design.md  README.md
docs/planning/: phase-1-foundation.md  phase-2-mobile-mvp.md  phase-3-desktop-cli.md  phase-4-web-rendezvous.md  phase-5-dense-mesh.md
docs/vision/: problem-statement.md  use-cases.md
ffi/: Cargo.toml
ffi/src/: lib.rs
ffi/tests/: ffi_roundtrip.rs  smoke.rs
rendezvous/: Cargo.toml  Dockerfile
rendezvous/migrations/: 001_initial_schema.sql
rendezvous/src/: db.rs  lib.rs  main.rs  server.rs
