[workspace]
members = [
    "core",
    "ffi",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tfuent1/ripple"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
rmp-serde = "1.1"
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

