[workspace]
members = [
    "core",
    "ffi",
    "cli",
    "rendezvous",
]
resolver = "2"

[workspace.package]
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tfuent1/ripple"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
rmp-serde = "1.1"
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
hex = "0.4"
anyhow = "1.0"
base64        = "0.21"
tower-http    = { version = "0.5", features = ["limit"] }

[workspace.lints.rust]
unused_imports = "warn"
dead_code      = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Pedantic lints that are too noisy for a project in active development.
# Re-evaluate these before v1.0.
module_name_repetitions = "allow"   # e.g. BundleError, StoreError — intentional
missing_errors_doc      = "allow"   # doc coverage for every Result return is premature
missing_panics_doc      = "allow"
must_use_candidate      = "allow"   # clippy suggests #[must_use] very aggressively

