[package]
name = "ripple-cli"
description = "Ripple CLI daemon and tooling"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ripple"
path = "src/main.rs"

[dependencies]
ripple-core = { path = "../core" }
clap      = { workspace = true }
tokio     = { workspace = true }
reqwest   = { workspace = true }
tracing   = { workspace = true }
tracing-subscriber = { workspace = true }
rmp-serde = { workspace = true }
serde     = { workspace = true }
uuid      = { workspace = true }
hex       = { workspace = true }
serde_json = { workspace = true }
anyhow = {workspace = true }
thiserror = { workspace = true }
