[package]
name = "ripple-core"
description = "Core mesh networking logic for Ripple"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ripple_core"
crate-type = ["lib"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
