[package]
name = "ripple-core"
description = "Core mesh networking logic for Ripple"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ripple_core"
crate-type = ["lib"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

