[package]
name = "ripple-core"
description = "Core mesh networking logic for Ripple"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ripple_core"
crate-type = ["lib"]

[dependencies]
chacha20poly1305 = { workspace = true } 
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }

